--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -26,8 +26,10 @@
             </div>
         </div>
     </nav>
-    <main class="container mt-5">
-        <h1>{% translate "Task manager" %}</h1>
+    <main class="container mt-4">
+        <div class="p-4 rounded-2 border bg-body-tertiary">
+            <h1>{% translate "Task manager" %}</h1>
+        </div>
     </main>
 </body>
 </html>
