--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -9,20 +9,30 @@
 
 {% block content %}
 <h1>{% translate "Users" %}</h1>
-<table class="table table-striped">
-    <tr>
-        <th>ID</th>
-        <th>{% translate "User name" %}</th>
-        <th>{% translate "Full name" %}</th>
-        <th>{% translate "Creation date" %}</th>
-    </tr>
-    {% for user in users %}
-    <tr>
-        <td>{{ user.id }}</td>
-        <td>{{ user.username }}</td>
-        <td>{{ user.first_name }} {{ user.last_name }}</td>
-        <td>{{ user.date_joined }}</td>
-    </tr>
-    {% endfor %}
+<table class="table table-striped mt-4">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>{% translate "User name" %}</th>
+            <th>{% translate "Full name" %}</th>
+            <th>{% translate "Creation date" %}</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for user in users %}
+        <tr>
+            <td>{{ user.id }}</td>
+            <td>{{ user.username }}</td>
+            <td>{{ user.first_name }} {{ user.last_name }}</td>
+            <td>{{ user.date_joined }}</td>
+            <td>
+                <a href="#">Update</a>
+                <br>
+                <a href="#">Delete</a>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
