--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,12 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a href="{% url "users:index" %}" class="nav-link">{% translate "Users" %}</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">{% translate "Log in" %}</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">{% translate "Sign up" %}</a></li>
+                    <li class="nav-item"><a href="{% url "users:create" %}" class="nav-link">{% translate "Sign up" %}</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    {% bootstrap_messages %}
     <main class="container mt-4">
         {% block content %}{% endblock %}
     </main>
