--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,12 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a href="{% url "users:index" %}" class="nav-link">{% translate "Users" %}</a></li>
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a href="#" class="nav-link">{% translate "Log out" %}</a></li>
+                    <li class="nav-item">
+                        <form action="{% url "users:logout" %}" method="post">
+                            {% csrf_token %}
+                            <input type="submit" class="nav-link" value="{% translate "Log out" %}">
+                        </form>
+                    </li>
                     {% else %}
                     <li class="nav-item"><a href="{% url "users:login" %}" class="nav-link">{% translate "Log in" %}</a></li>
                     <li class="nav-item"><a href="{% url "users:create" %}" class="nav-link">{% translate "Sign up" %}</a></li>
