--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <h1>{% translate "Registration" %}</h1>
-<form action="#" method="post" class="mt-4">
+<form action="{% url "users:create" %}" method="post" class="mt-4">
     {% csrf_token %}
     {% bootstrap_form form %}
     <input type="submit" value="{% translate "Sign up" %}" class="btn btn-primary">
