--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -27,9 +27,9 @@
             <td>{{ user.first_name }} {{ user.last_name }}</td>
             <td>{{ user.date_joined }}</td>
             <td>
-                <a href="#">Update</a>
+                <a href="{% url "users:update" user.id %}">{% translate "Update" %}</a>
                 <br>
-                <a href="#">Delete</a>
+                <a href="#">{% translate "Delete" %}</a>
             </td>
         </tr>
         {% endfor %}
