--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
             </div>
         </div>
     </nav>
-    {% bootstrap_messages %}
+    <div class="container">
+        {% bootstrap_messages %}
+    </div>
     <main class="container mt-4">
         {% block content %}{% endblock %}
     </main>
