Add user deletion

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -29,7 +29,7 @@
             <td>
                 <a href="{% url "users:update" user.id %}">{% translate "Update" %}</a>
                 <br>
-                <a href="#">{% translate "Delete" %}</a>
+                <a href="{% url "users:delete" user.id %}">{% translate "Delete" %}</a>
             </td>
         </tr>
         {% endfor %}
