--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item"><a href="{% url "users:login" %}" class="nav-link">{% translate "Log in" %}</a></li>
-                    <li class="nav-item"><a href="{% url "users:create" %}" class="nav-link">{% translate "Sign up" %}</a></li>
+                    <li class="nav-item"><a href="{% url "users:create" %}" class="nav-link">{% translate "Registration" %}</a></li>
                     {% endif %}
                 </ul>
             </div>
