--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -12,6 +12,6 @@
 <form action="{% url "users:create" %}" method="post" class="mt-4">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" value="{% translate "Sign up" %}" class="btn btn-primary">
+    <input type="submit" value="{% translate "Register" %}" class="btn btn-primary">
 </form>
 {% endblock %}
