Add margin bottom to main container

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
     <div class="container">
         {% bootstrap_messages %}
     </div>
-    <main class="container mt-4">
+    <main class="container my-4">
         {% block content %}{% endblock %}
     </main>
 </body>
