--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,9 @@
                     <li class="nav-item"><a href="{% url "users:index" %}" class="nav-link">{% translate "Users" %}</a></li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
+                        <a href="{% url "statuses:index" %}" class="nav-link">{% translate "Statuses" %}</a>
+                    </li>
+                    <li class="nav-item">
                         <form action="{% url "users:logout" %}" method="post">
                             {% csrf_token %}
                             <input type="submit" class="nav-link" value="{% translate "Log out" %}">
