--- a/statuses/templates/statuses/index.html
+++ b/statuses/templates/statuses/index.html
@@ -26,7 +26,7 @@
             <td>{{ status.name }}</td>
             <td>{{ status.created_at }}</td>
             <td>
-                <div><a href="#">{% translate "Update" %}</a></div>
+                <div><a href="{% url "statuses:update" status.id %}">{% translate "Update" %}</a></div>
                 <div><a href="#">{% translate "Delete" %}</a></div>
             </td>
         </tr>
