--- a/statuses/templates/statuses/update.html
+++ b/statuses/templates/statuses/update.html
@@ -4,11 +4,11 @@
 {% load i18n %}
 
 {% block title %}
-{% translate "Statuses" %}
+{% translate "Edit status" %}
 {% endblock %}
 
 {% block content %}
-<h1>{% translate "Editing status" %}</h1>
+<h1>{% translate "Edit status" %}</h1>
 <form action="{% url "statuses:update" status.id %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
