--- a/statuses/templates/statuses/create.html
+++ b/statuses/templates/statuses/create.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block title %}
-{% translate "Statuses" %}
+{% translate "Create status" %}
 {% endblock %}
 
 {% block content %}
