--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -27,7 +27,7 @@
         {% for task in tasks  %}
         <tr>
             <td>{{ task.id }}</td>
-            <td>{{ task.name }}</td>
+            <td><a href="{% url "tasks:details" task.id %}">{{ task.name }}</a></td>
             <td>{{ task.status }}</td>
             <td>{{ task.author }}</td>
             <td>{{ task.performer|default:"" }}</td>
