--- a/tasks/templates/tasks/show.html
+++ b/tasks/templates/tasks/show.html
@@ -49,7 +49,7 @@
                 {{ task.created_at }}
             </div>
         </div>
-        <div class="mt-4"><a href="#">{% translate "Update" %}</a></div>
+        <div class="mt-4"><a href="{% url "tasks:update" task.id %}">{% translate "Update" %}</a></div>
         <div><a href="#">{% translate "Delete" %}</a></div>
     </div>
 </div>
