--- a/tasks/templates/tasks/show.html
+++ b/tasks/templates/tasks/show.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="mt-4"><a href="{% url "tasks:update" task.id %}">{% translate "Update" %}</a></div>
-        <div><a href="#">{% translate "Delete" %}</a></div>
+        <div><a href="{% url "tasks:delete" task.id %}">{% translate "Delete" %}</a></div>
     </div>
 </div>
 {% endblock %}
