--- a/labels/templates/labels/index.html
+++ b/labels/templates/labels/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <h1>{% translate "Labels" %}</h1>
-<a href="#" class="btn btn-primary mt-3">{% translate "Create label" %}</a>
+<a href="{% url "labels:create" %}" class="btn btn-primary mt-3">{% translate "Create label" %}</a>
 <table class="table table-striped mt-4">
     <thead>
         <tr>
