--- a/labels/templates/labels/index.html
+++ b/labels/templates/labels/index.html
@@ -26,7 +26,7 @@
             <td>{{ label.name }}</td>
             <td>{{ label.created_at }}</td>
             <td>
-                <div><a href="#">{% translate "Update" %}</a></div>
+                <div><a href="{% url "labels:update" label.id %}">{% translate "Update" %}</a></div>
                 <div><a href="#">{% translate "Delete" %}</a></div>
             </td>
         </tr>
