--- a/labels/templates/labels/update.html
+++ b/labels/templates/labels/update.html
@@ -12,6 +12,6 @@
 <form action="{% url "labels:update" label.id %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" value="{% translate "Create" %}" class="btn btn-primary">
+    <input type="submit" value="{% translate "Update" %}" class="btn btn-primary">
 </form>
 {% endblock %}
