--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,13 @@
                         <a href="{% url "labels:index" %}" class="nav-link">{% translate "Labels" %}</a>
                     </li>
                     <li class="nav-item">
-                        <form action="{% url "users:logout" %}" method="post">
+                        <form action="{% url "logout" %}" method="post">
                             {% csrf_token %}
-                            <input type="submit" class="nav-link" value="{% translate "Log out" %}">
+                            <input type="submit" class="nav-link" value="{% translate "Logout" %}">
                         </form>
                     </li>
                     {% else %}
-                    <li class="nav-item"><a href="{% url "users:login" %}" class="nav-link">{% translate "Login" %}</a></li>
+                    <li class="nav-item"><a href="{% url "login" %}" class="nav-link">{% translate "Login" %}</a></li>
                     <li class="nav-item"><a href="{% url "users:create" %}" class="nav-link">{% translate "Registration" %}</a></li>
                     {% endif %}
                 </ul>
