--- a/tasks/templates/tasks/show.html
+++ b/tasks/templates/tasks/show.html
@@ -26,11 +26,11 @@
         </div>
         <div class="row mb-2">
             <div class="col">
-                {% comment %}Translators: Task performer{% endcomment %}
-                {% translate "Performer" %}
+                {% comment %}Translators: Task executor{% endcomment %}
+                {% translate "Executor" %}
             </div>
             <div class="col">
-                {{ task.performer|default:"" }}
+                {{ task.executor|default:"" }}
             </div>
         </div>
         <div class="row mb-2">
