--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -24,7 +24,7 @@
         <tr>
             <td>{{ user.id }}</td>
             <td>{{ user.username }}</td>
-            <td>{{ user.first_name }} {{ user.last_name }}</td>
+            <td>{{ user.get_full_name }}</td>
             <td>{{ user.date_joined }}</td>
             <td>
                 <a href="{% url "users:update" user.id %}">{% translate "Update" %}</a>
