--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container-lg">
-            <a href="{% url "main:index" %}" class="navbar-brand">{% translate "Task manager" %}</a>
+            <a href="{% url "index" %}" class="navbar-brand">{% translate "Task manager" %}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
